<resources>
    <string name="app_name">FA16_BSE_100_Assi_2</string>
    <string name="open">open</string>
    <string name="back">back</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="enter_password">enter password</string>
    <string name="welcome_to_your_safe">Welcome to your safe</string>
</resources>